--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -33,16 +33,22 @@ ZMK_COMBO(mouse,      &smart_mouse,     LB3 LB4,     BASE MAC GAMING, COMBO_TERM
 ZMK_COMBO(leader,      &leader,         RT1 RT3,     BASE MAC GAMING, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
 /* Horizontal combos - left hand */
-ZMK_COMBO(cut,        &kp LC(X),        LB3 LB1,     BASE GAMING,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(copy,       &kp LC(C),        LB3 LB2,     BASE GAMING,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(paste,      &kp LC(V),        LB2 LB1,     BASE GAMING,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(mcut,       &kp LG(X),        LB3 LB1,     	     MAC,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(copy,       &kp LG(C),        LB3 LB2,             MAC,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(mpaste,     &kp LG(V),        LB2 LB1,             MAC,       COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(cut,        &kp LC(X),        LB3 LB1,         BASE GAMING,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(copy,       &kp LC(C),        LB3 LB2,         BASE GAMING,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(paste,      &kp LC(V),        LB2 LB1,         BASE GAMING,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(mcut,       &kp LG(X),        LB3 LB1,     	         MAC,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(copy,       &kp LG(C),        LB3 LB2,                 MAC,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(mpaste,     &kp LG(V),        LB2 LB1,                 MAC,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
 /* Horizontal combos - right hand */
 ZMK_COMBO(quote,      &kp SQT,          RT1 RT2,     BASE MAC GAMING,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(dquote,     &kp DQT,          RT2 RT3,     BASE MAC GAMING,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(qmark,      &kp QMARK,        RB2 RB3,     BASE MAC GAMING,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
+
+ZMK_COMBO(xquote,     &kp RA(SQT),      RT1 RT2,               LOWER,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(xdquote,    &kp RA(DQT),      RT2 RT3,               LOWER,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(xcaret,     &kp RA(CARET),    RT0 RT2,               LOWER,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(xtilde,     &kp RA(TILDE),    RT0 RT3,               LOWER,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(xgrave,     &kp RA(GRAVE),    RT1 RT3,               LOWER,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
 /* leader */
 //ZMK_COMBO(lead,     &leader,      RB2 RB3,     BASE, COMBO_TERM_FAST, COMBO_IDLE_FAST)
