--- a/draw/totem.yaml
+++ b/draw/totem.yaml
@@ -1,7 +1,7 @@
 layout: {zmk_keyboard: totem_left}
 layers:
   Base:
-  - {t: Q, s: AltGr+`}
+  - {t: Q, s: Dead `}
   - W
   - E
   - R
@@ -33,7 +33,7 @@ layers:
   - .
   - /
   - \
-  - {t: Numword, h: Num, s: Sticky Num}
+  - {t: 󰜼Numword, h: Num, s: St Num}
   - {t: Tab, h: Lower}
   - {t: Enter, h: Nav}
   - {t: Space SC, h: Num}
@@ -72,7 +72,7 @@ layers:
   - {type: trans}
   - {type: trans}
   - \
-  - {t: Numword, h: Num, s: Sticky Num}
+  - {t: 󰜼Numword, h: Num, s: St Num}
   - {type: trans}
   - {t: Enter, h: MacNav}
   - {type: trans}
@@ -111,7 +111,7 @@ layers:
   - {type: trans}
   - {type: trans}
   - \
-  - {t: Numword, h: Num, s: Sticky Num}
+  - {t: 󰜼Numword, h: Num, s: St Num}
   - {t: Tab, h: Lower}
   - {t: Enter, h: Nav}
   - {t: Space SC, h: Num}
@@ -150,7 +150,7 @@ layers:
   - {type: trans}
   - {type: trans}
   - \
-  - {t: Numword, h: Num, s: Sticky Num}
+  - {t: 󰜼Numword, h: Num, s: St Num}
   - {type: held}
   - {type: trans}
   - {type: trans}
@@ -167,10 +167,10 @@ layers:
   - ↑
   - End
   - {type: trans}
-  - {t: Gui, h: sticky}
-  - {t: Alt, h: sticky}
-  - {t: Ctrl, h: sticky}
-  - {t: Shift, h: sticky}
+  - {t: Gui, h: '$$mdi:gesture-tap-hold$$'}
+  - {t: Alt, h: '$$mdi:gesture-tap-hold$$'}
+  - {t: Ctrl, h: '$$mdi:gesture-tap-hold$$'}
+  - {t: Shift, h: '$$mdi:gesture-tap-hold$$'}
   - {type: trans}
   - PgDn
   - ←
@@ -189,7 +189,7 @@ layers:
   - {type: trans}
   - {type: trans}
   - \
-  - {t: Numword, h: Num, s: Sticky Num}
+  - {t: 󰜼Numword, h: Num, s: St Num}
   - {type: trans}
   - {type: trans}
   - {type: trans}
@@ -228,7 +228,7 @@ layers:
   - {type: trans}
   - Boot
   - \
-  - {t: Numword, h: Num, s: Sticky Num}
+  - {t: 󰜼Numword, h: Num, s: St Num}
   - {type: held}
   - {type: trans}
   - {type: trans}
@@ -267,7 +267,7 @@ layers:
   - Right Click
   - {type: trans}
   - \
-  - {t: Numword, h: Num, s: Sticky Num}
+  - {t: 󰜼Numword, h: Num, s: St Num}
   - {type: trans}
   - {type: trans}
   - CANCEL
@@ -306,7 +306,7 @@ layers:
   - {type: trans}
   - {type: trans}
   - \
-  - {t: Numword, h: Num, s: Sticky Num, type: held}
+  - {t: 󰜼Numword, h: Num, s: St Num, type: held}
   - {type: trans}
   - {type: trans}
   - CANCEL
@@ -345,18 +345,18 @@ layers:
   - {type: trans}
   - {type: trans}
   - \
-  - {t: Numword, h: Num, s: Sticky Num}
+  - {t: 󰜼Numword, h: Num, s: St Num}
   - {type: trans}
   - {type: held}
   - {type: trans}
   - {type: trans}
   - ''
   MacNav:
-  - {s: Gui+Ctl+Q}
-  - {type: trans}
+  - Screen Lock
+  - Next App Window
   - Prev Win/Tab
   - Next Tab
-  - '&mac_sw'
+  - Next Window
   - PgUp
   - Home
   - ↑
@@ -366,7 +366,7 @@ layers:
   - {type: trans}
   - {type: trans}
   - {type: trans}
-  - '&mac_prsc'
+  - Print Screen
   - PgDn
   - ←
   - ↓
@@ -384,7 +384,7 @@ layers:
   - {type: trans}
   - {type: trans}
   - \
-  - {t: Numword, h: Num, s: Sticky Num}
+  - {t: 󰜼Numword, h: Num, s: St Num}
   - {type: trans}
   - {type: held}
   - {type: trans}
@@ -393,34 +393,23 @@ layers:
 combos:
 - p: [17, 16]
   k: {t: ESC, h: Sft+Ctrl}
-  l: [Base, Nav, Num, MacOS, Gaming]
+  l: [Base, MacOS, Gaming]
 - p: [12, 13]
   k: {t: ESC, h: Sft+Ctrl}
-  l: [Base, Nav, Num, MacOS, Gaming]
-- p: [16, 18]
-  k: {t: Numword, h: AltGr+RSFT, s: Sticky Num}
-  l: [Base, MacOS, Gaming]
-  a: top
-  o: 1.45
-- p: [13, 11]
-  k: {t: Numword, h: Alt+LSFT, s: Sticky Num}
-  l: [Base, MacOS, Gaming]
-  a: top
-  o: 1.45
-- p: [13, 16]
-  k: {t: Caps, h: Sft+RSFT}
   l: [Base, MacOS, Gaming]
 - p: [22, 21]
   k: Smart Mouse
   l: [Base, MacOS, Gaming]
-- p: [6, 7, 8, 9]
-  k: '&leader'
+- p: [6, 8]
+  k: Leader
   l: [Base, MacOS, Gaming]
+  a: top
+  o: 0.5
 - p: [22, 24]
   k: Cut
   l: [Base, Gaming]
   a: bottom
-  o: 1.25
+  o: 1.5
 - p: [22, 23]
   k: Ctl+C
   l: [Base, Gaming]
@@ -445,3 +434,26 @@ combos:
 - p: [28, 29]
   k: '?'
   l: [Base, MacOS, Gaming]
+- p: [6, 7]
+  k: Dead '
+  l: [Lower]
+- p: [7, 8]
+  k: Dead "
+  l: [Lower]
+- p: [5, 7]
+  k: Dead ^
+  l: [Lower]
+  a: top
+  o: 1.0
+  s: -0.5
+- p: [5, 8]
+  k: Dead ~
+  l: [Lower]
+  a: top
+  o: 1.0
+- p: [6, 8]
+  k: Dead `
+  l: [Lower]
+  a: top
+  o: 0.5
+  s: 0.5
