--- a/build.yaml
+++ b/build.yaml
@@ -50,7 +50,7 @@ include:
   - board: seeeduino_xiao_ble
     shield: totem_left rgbled_adapter
     artifact-name: totem_standalone_left
-    cmake-args: -DBODGE=y
+#    cmake-args: -DBODGE=y
   - board: seeeduino_xiao_ble
     shield: totem_right rgbled_adapter
     artifact-name: totem_standalone_right
@@ -116,3 +116,8 @@ include:
   - board: nice_nano_v2
     shield: crosses_right
     artifact-name: crosses_standalone_right
+
+    # iskra
+  - board: nice_nano_v2
+    shield: iskra
+    artifact-name: iskra
