--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ firmware
 zephyr
 zmk
 draw/base.yaml
+draw/base.svg
 nice-view-elemental
 nice-*
 prospector*
@@ -14,3 +15,9 @@ zmk-dongle-screen
 
 zmk-input-processor-report-rate-limit
 zmk-pmw3610-driver
+zmk-input-processor-xyz/
+zmk-nice-oled/
+zmk-report-rate-limit/
+zmk-rgbled-widget/
+zmk-scroll-snap/
+gggw-zmk-keebs/
