--- a/build.yaml
+++ b/build.yaml
@@ -11,123 +11,10 @@
 #   - board: nice_nano_v2
 #     shield: reviung41
 #
----
 include:
-  - board: seeeduino_xiao_ble
-    shield: tester_xiao
-  - board: nice_nano_v2
-    shield: tester_pro_micro
-  - board: nice_nano_v2
-    shield: settings_reset
-    artifact-name: nice_nano_reset
-  - board: seeeduino_xiao_ble
-    shield: settings_reset
-    artifact-name: xiao_reset
-
-    # Lily with dongle
-  - board: seeeduino_xiao_ble
-    shield: lily58_dongle dongle_screen
-    snippet: studio-rpc-usb-uart
-    artifact-name: lily_dongle_center
-  - board: nice_nano_v2
-    shield: lily58_left nice_view_adapter nice_view_elemental
-    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
-    artifact-name: lily_dongle_left
-  - board: nice_nano_v2
-    shield: lily58_right nice_view_adapter nice_view_elemental
-    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
-    artifact-name: lily_dongle_right
-
-    # Lily without a dongle
-  - board: nice_nano_v2
-    shield: lily58_left nice_view_adapter nice_epaper
-    artifact-name: lily_standalone_left
-  - board: nice_nano_v2
-    shield: lily58_right nice_view_adapter nice_epaper
-    artifact-name: lily_standalone_right
-
-    # Totem without a dongle
-  - board: seeeduino_xiao_ble
-    shield: totem_left rgbled_adapter
-    artifact-name: totem_standalone_left
-#    cmake-args: -DBODGE=y
-  - board: seeeduino_xiao_ble
-    shield: totem_right rgbled_adapter
-    artifact-name: totem_standalone_right
-
-    # same as totem but without the bodge
-  - board: seeeduino_xiao_ble
-    shield: totem_left rgbled_adapter
-    snippet: studio-rpc-usb-uart
-    artifact-name: totemx_standalone_left
-  - board: seeeduino_xiao_ble
-    shield: totem_right rgbled_adapter
-    snippet: studio-rpc-usb-uart
-    artifact-name: totemx_standalone_right
-
-    # Totem with a dongle
-  - board: seeeduino_xiao_ble
-    shield: totem_left
-    artifact-name: totem_dongle_left
-    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
-  - board: seeeduino_xiao_ble
-    shield: totem_right
-    artifact-name: totem_dongle_right
-    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
-  - board: seeeduino_xiao_ble
-    shield: totem_dongle
-    snippet: studio-rpc-usb-uart
-    artifact-name: totem_dongle_central
-
-    # Forager without a dongle
-  - board: seeeduino_xiao_ble
-    shield: forager_left rgbled_adapter
-    artifact-name: forager_standalone_left
-  - board: seeeduino_xiao_ble
-    shield: forager_right rgbled_adapter
-    artifact-name: forager_standalone_right
-
-    # Forager with a dongle
-  - board: seeeduino_xiao_ble
-    shield: forager_dongle dongle_screen
-    snippet: studio-rpc-usb-uart
-    artifact-name: forager_dongle_central
-  - board: seeeduino_xiao_ble
-    shield: forager_left rgbled_adapter
-    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
-    artifact-name: forager_dongle_left
-  - board: seeeduino_xiao_ble
-    shield: forager_right rgbled_adapter
-    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
-    artifact-name: forager_dongle_right
-
-    # Charybdis without a dongle
-  - board: nice_nano_v2
-    shield: charybdis_nano_left
-    artifact-name: charybdis_nano_standalone_left
-  - board: nice_nano_v2
-    shield: charybdis_nano_right
-    artifact-name: charybdis_nano_standalone_right
-
-    # Crosses/bridges without a dongle
-  - board: nice_nano_v2
+  - board: nice_nano
     shield: crosses_left
-    artifact-name: crosses_standalone_left
-  - board: nice_nano_v2
+  - board: nice_nano
     shield: crosses_right
-    artifact-name: crosses_standalone_right
-
-    # iskra
-  - board: nice_nano_v2
-    shield: iskra
-    artifact-name: iskra
-
-  # totemball
-  - board: seeeduino_xiao_ble
-    shield: totemball_left rgbled_adapter
-    artifact-name: totemball_standalone_left
-  - board: seeeduino_xiao_ble
-    shield: totemball_right rgbled_adapter
-    artifact-name: totemball_standalone_right
-    cmake-args: "-DDTS_EXTRA_CPPFLAGS=-DUSE_TB=1"
-    snippet: zmk-usb-logging
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
