--- a/config/west.yml
+++ b/config/west.yml
@@ -1,196 +1,44 @@
-# for local build environments. The workspace has four toplevel directories
-# containing the user config, modules, zephy and ZMK.
-#
-# ZMK-Workspace
-# ├── config
-# ├── modules
-# ├── zephyr
-# └── zmk
-#
-# To create a local build environment, clone this repository and then run the
-# following commands from its toplevel directory:
-#
-# $ west init -l config
-# $ west update
-# $ west zephyr-export
-#
----
 manifest:
   defaults:
-    remote: urob
-    revision: v0.3
-
+    revision: main
   remotes:
     - name: urob
       url-base: https://github.com/urob
-    - name: coredump
-      url-base: https://github.com/coredump
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
-    - name: kevinpastor
-      url-base: https://github.com/kevinpastor
-    - name: janpfischer
-      url-base: https://github.com/janpfischer
-    - name: caksoylar
-      url-base: https://github.com/caksoylar
-    - name: joelspadin
-      url-base: https://github.com/joelspadin
-    - name: carrefinho
-      url-base: https://github.com/carrefinho
-    - name: prospector
-      url-base: https://github.com/t-ogura
-    - name: mctechnology17
-      url-base: https://github.com/mctechnology17
-    - name: vloth
-      url-base: https://github.com/vloth
-    - name: badjeff
-      url-base: https://github.com/badjeff
+    - name: Good-Great-Grand-Wonderful
+      url-base: https://github.com/Good-Great-Grand-Wonderful
     - name: kot149
       url-base: https://github.com/kot149
-    - name: efogdev
-      url-base: https://github.com/efogdev
-    - name: bluedrink9
-      url-base: https://github.com/bluedrink9
-    - name: oleksandrmaslov
-      url-base: https://github.com/oleksandrmaslov
-
   projects:
     - name: zmk
       remote: zmkfirmware
-      revision: v0.3
       import: app/west.yml
 
     # ZMK modules
+    - name: zmk-helpers
+      path: modules/zmk/helpers
+      remote: urob
     - name: zmk-adaptive-key
       path: modules/zmk/adaptive-key
+      remote: urob
     - name: zmk-auto-layer
       path: modules/zmk/auto-layer
+      remote: urob
     - name: zmk-leader-key
       path: modules/zmk/leader-key
+      remote: urob
     - name: zmk-tri-state
       path: modules/zmk/tri-state
+      remote: urob
 
-    - name: zmk-helpers
-      remote: coredump
-      revision: forager-labels
-      path: modules/zmk/helpers
-
-    - name: zmk-locales
-      remote: joelspadin
-      revision: main
-      path: modules/zmk/locales
-
-    - name: nice-view-elemental
-      remote: kevinpastor
-      revision: main
-      path: modules/nice-view-elemental
-
-    - name: zmk-dongle-screen
-      remote: janpfischer
-      revision: main
-      path: modules/zmk/dongle-screen
-
-    - name: zmk-rgbled-widget
-      remote: caksoylar
-      revision: main
-      path: modules/zmk/rbgled-widget
-
-    - name: zmk-config-totem # modularized totem fork
-      remote: coredump
-      revision: chore/moduled-studiod
-      path: modules/zmk/config-totem
-
-    - name: zmk-keyboard-totemball-mod
-      remote: coredump
-      revision: main
-      path: modules/zmk/keyboard-totemball-mod
-
-    - name: zmk-keyboard-diodeless-iskra
-      remote: coredump
-      revision: main
-      path: modules/zmk/keyboard-diodeless-iskra
-
-    - name: zmk-lily58-dongle # modularized lily fork
-      remote: coredump
-      revision: main
-      path: modules/zmk/lily58-dongle
-
-    - name: charybdis-wireless-mini-zmk-firmware
-      remote: coredump
-      revision: main
-      path: modules/zmk/charybdis-wireless-mini-zmk-firmware
-
-    - name: zmk-totem-dongle
-      remote: coredump
-      revision: main
-      path: modules/zmk/totem-dongle
-
-    - name: forager-zmk-module
-      remote: carrefinho
-      revision: main
-      path: modules/forager-zmk-module
-
-    - name: prospector-zmk-module
-      remote: carrefinho
-      revision: main
-      path: modules/prospector-zmk-module
-
-    - name: zmk-nice-oled
-      remote: mctechnology17
-      revision: main
-      path: modules/zmk/nice-oled
-
-    - name: zmk-keyboard-charybdis-nano
-      remote: coredump
-      revision: main
-      path: modules/zmk/keyboard-charybdis-nano
+    - name: gggw-zmk-keebs
+      remote: Good-Great-Grand-Wonderful
+      revision: zephyr-4.1
+      import: config/west.yml
 
     - name: zmk-scroll-snap
       remote: kot149
       revision: v1
-      path: modules/zmk/scroll-snap
-
-    - name: zmk-keyboard-crosses
-      revision: main
-      remote: coredump
-#      import: west.yml
-      path: modules/zmk/keyboard-crosses
-
-    - name: zmk-poor-mans-led-indicator
-      remote: bluedrink9
-      revision: main
-      path: modules/zmk/poor-mans-led-indicator
-
-    - name: zmk-pmw3610-driver
-      remote: coredump
-      revision: main
-      path: modules/zmk/pmw3610-driver
-
-    - name: zmk-input-processor-report-rate-limit
-      remote: badjeff
-      revision: main
-      path: modules/zmk/input-processor-report-rate-limit
-
-    - name: zmk-pointing-acceleration
-      remote: oleksandrmaslov
-      revision: main
-      path: modules/zmk/pointing-acceleration
-
-    - name: zephyr
-      revision: v3.5.0+zmk-fixes
-      remote: zmkfirmware
-      clone-depth: 1
-      import:
-        # Only enable most commonly used boards. For less common hardware one
-        # may need to enable additional modules.
-        name-allowlist:
-          - cmsis
-          - hal_nordic
-          - hal_rpi_pico
-          - hal_stm32
-          - lvgl
-          - tinycrypt
-          - nice_nano_v2
-
   self:
     path: config
