--- a/build.yaml
+++ b/build.yaml
@@ -4,21 +4,14 @@
 # control, add individual board + shield combinations to
 # the `include` property, e.g:
 #
-# board: [ "nice_nano_v2" ]
-# shield: [ "corne_left", "corne_right" ]
-# include:
-#   - board: bdn9_rev2
-#   - board: nice_nano_v2
-#     shield: reviung41
-#
 include:
   - board: nice_nano
     shield: crosses_left
   - board: nice_nano
     shield: crosses_right
     snippet: studio-rpc-usb-uart
-    cmake-args: -DCONFIG_ZMK_STUDIO=y
-
+    cmake-args: |
+      -DCONFIG_ZMK_STUDIO=y
   - board: xiao_ble/nrf52840
     shield: prospector_scanner
     artifact-name: prospector_scanner
