--- a/config/west.yml
+++ b/config/west.yml
@@ -16,6 +16,7 @@ manifest:
   projects:
     - name: zmk
       remote: zmkfirmware
+      revision: main
       import: app/west.yml
 
     # ZMK modules
